Fix for background clipping

--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,8 @@
 
 /* Global styles */
 body {
+  min-height: 100vh;
+
   font-family: 'Open Sans', sans-serif;
   font-size: 14px;
   font-weight: 400;
